--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:watch": "vitest --dir src/use-cases",
     "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
     "test:e2e": "vitest run --dir src/http",
+    "test:e2e:watch": "vitest --dir src/http",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
   },
@@ -22,11 +23,14 @@
   "devDependencies": {
     "@types/bcryptjs": "2.4.3",
     "@types/node": "20.5.8",
+    "@types/supertest": "2.0.16",
     "@typescript-eslint/eslint-plugin": "6.5.0",
     "@typescript-eslint/parser": "6.5.0",
     "@vitest/coverage-v8": "0.34.4",
     "eslint": "8.48.0",
+    "npm-run-all": "4.1.5",
     "prisma": "5.2.0",
+    "supertest": "6.3.3",
     "tsup": "7.2.0",
     "tsx": "3.12.8",
     "typescript": "5.2.2",
